k8s/infrastructure/network/cilium/Namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cilium-spire
  labels:
    karlsen.fr/inject-cluster-ca: 'true'
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: latest
  annotations:
    config.kubernetes.io/behavior: merge
