k8s/infrastructure/network/cilium/CiliumClusterwideNetworkPolicy.default-deny.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: default-deny
spec:
  endpointSelector: {matchExpressions: [{key: k8s:io.kubernetes.pod.namespace, operator: NotIn, values: [kube-system, cilium-spire, cilium-secrets, envoy-gateway-system]}]}
  ingressDeny: [{}]
  egressDeny: [{}]
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-dns-egress
spec:
  endpointSelector: {}
  egress:
    - toEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: kube-system, k8s-app: kube-dns}]
      toPorts: [{ports: [{port: '53', protocol: TCP}, {port: '53', protocol: UDP}], rules: {dns: [{matchPattern: '*'}]}}]
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-monitoring-ingress
spec:
  endpointSelector: {matchLabels: {prometheus.io/scrape: 'true'}}
  ingress:
    - fromEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: monitoring}}]
